--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGODB_URL='mongodb+srv://herol647:sPdtt5yN2jdJ8ltu@cluster11.6bqen.mongodb.net/?retryWrites=true&w=majority&appName=Cluster11'
+MONGODB_URL='your -mongodb-URL'
